--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="container-fluid bg-primary fixed-bottom">
+  <div class="row p-2">
+    <div class="col-4 text-center text-white">
+      GitHub Search App
+    </div>
+    <div class="col-8 text-center text-white">
+      Copyright Blah Blah Blah!
+    </div>
+  </div>
+</footer>
