--- a/src/app/layouts/header/header.component.html
+++ b/src/app/layouts/header/header.component.html
@@ -1,1 +1,38 @@
-<p>header works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" [routerLink]="['/']">
+    <img src="./../../../assets/img.png" width="30" height="30" alt="" />
+    GitHub Finder App
+  </a>
+
+  <div class="navbar-collapse">
+    <div class="navbar-nav ml-auto">
+      <div *ngIf="email" class="navbar-text float-left">
+        {{ email }}
+      </div>
+      <a class="nav-item nav-link" [routerLink]="['/']">Home</a>
+      <a
+        *ngIf="!email"
+        class="nav-item nav-link"
+        routerLinkActive="active"
+        [routerLink]="['/signin']"
+        >SignIn</a
+      >
+      <a
+        *ngIf="!email"
+        class="nav-item nav-link"
+        routerLinkActive="active"
+        [routerLink]="['/signup']"
+      >
+        SignUp
+      </a>
+      <a
+        *ngIf="email"
+        class="nav-item nav-link"
+        routerLinkActive="active"
+        (click)="handleSignOut()"
+      >
+        logout
+      </a>
+    </div>
+  </div>
+</nav>
